bibliotecario creade em andamento.

--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -14,7 +14,7 @@
                 </i>
                 Livros
             </a>
-            <a mat-list-item>
+            <a mat-list-item routerLink="/bibliotecarios">
                 <i class="material-icons">
                     badge
                 </i>
