--- a/src/app/components/livro/livro-delete/livro-delete.component.html
+++ b/src/app/components/livro/livro-delete/livro-delete.component.html
@@ -1,15 +1,15 @@
 <mat-card>
-    <mat-card-title>Alterar Livro</mat-card-title>
+    <mat-card-title>Excluir Livro</mat-card-title>
     <form>
         <mat-form-field>
             <input matInput placeholder="Título do livro" 
-                [(ngModel)]="livro.nome" name="nome">
+                [value]="livro.nome" name="nome" disabled>
         </mat-form-field>
     </form>
 
 
-<button mat-raised-button (click)="updateLivro()" color="primary" >
-    Atualizar
+<button mat-raised-button (click)="deleteLivro()" color="warn" >
+    Excluir
 </button>
 
 <button mat-raised-button (click)="cancel()">
