--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -18,7 +18,7 @@
                 <i class="material-icons">
                     badge
                 </i>
-                Perfil
+                Bibliotecarios
             </a>
         </mat-nav-list>
     </mat-sidenav>
