--- a/src/app/views/bibliotecario-crud/bibliotecario-crud/bibliotecario-crud.component.html
+++ b/src/app/views/bibliotecario-crud/bibliotecario-crud/bibliotecario-crud.component.html
@@ -1,3 +1,5 @@
 <button mat-raised-button (click)="navigateToBibliotecarioCreate()" color="primary">
-    Novo Livro
+    Novo Prestador
 </button>
+
+<app-bibliotecario-read></app-bibliotecario-read>
