biblioteca em andamento

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -5,4 +5,5 @@
     <mat-card-subtitle class="subtitle">
         sistema Biblioteca Audax em Angular v9 e spring boot
     </mat-card-subtitle>
+    <app-biblioteca-crud></app-biblioteca-crud>
 </mat-card>
