--- a/src/app/components/bibliotecario/bibliotecario-delete/bibliotecario-delete.component.html
+++ b/src/app/components/bibliotecario/bibliotecario-delete/bibliotecario-delete.component.html
@@ -3,19 +3,19 @@
     <form>
         <mat-form-field>
             <input matInput placeholder="Nome" 
-                [(ngModel)]="bibliotecario.nome" name="nome">
+                [value]="bibliotecario.nome" name="nome" disabled>
         </mat-form-field>
         <mat-form-field>
             <input matInput placeholder="Empresa" 
-                [(ngModel)]="bibliotecario.bibliotecas" name="bibliotecas">
+                [value]="bibliotecario.bibliotecas" name="bibliotecas" >
         </mat-form-field>
         <mat-form-field>
             <input matInput placeholder="Status" 
-                [(ngModel)]="bibliotecario.status" name="status">
+                [value]="bibliotecario.status" name="status" disabled>
         </mat-form-field>
         <mat-form-field>
             <input matInput placeholder="Admin" 
-                [(ngModel)]="bibliotecario.admin" name="admin">
+                [value]="bibliotecario.admin" name="admin" disable>
         </mat-form-field>
     </form>
 
