--- a/src/app/components/biblioteca/biblioteca-update/biblioteca-update.component.css
+++ b/src/app/components/biblioteca/biblioteca-update/biblioteca-update.component.css
@@ -5,5 +5,28 @@ form {
 }
 
 button {
-    margin: 20px 15px 0px 0px; 
+    margin: 20px 15px 0px 0px;
+}
+
+
+table {
+    width: 100%;
+}
+
+.edit {
+    margin-right: 10px;
+}
+
+.edit>i {
+    color: #26d926;
+}
+
+.delete i {
+    color: #e35e6b;
+}
+
+.title {
+    font-size: 3rem;
+    font-weight: 70;
+    line-height: 1.2;
 }
