--- a/src/app/components/biblioteca/biblioteca-update/biblioteca-update.component.html
+++ b/src/app/components/biblioteca/biblioteca-update/biblioteca-update.component.html
@@ -2,35 +2,81 @@
     <mat-card-title>Atualizar Empresa</mat-card-title>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Registro" 
-                [(ngModel)]="biblioteca.id" name="nome">
+            <input matInput placeholder="Registro" [(ngModel)]="biblioteca.id" name="nome">
         </mat-form-field>
     </form>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Empresa" 
-                [(ngModel)]="biblioteca.nome" name="nome">
+            <input matInput placeholder="Empresa" [(ngModel)]="biblioteca.nome" name="nome">
         </mat-form-field>
     </form>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Data do Cadastro" 
-                [(ngModel)]="biblioteca.dataCadastro" name="nome" disabled>
-        </mat-form-field>
-    </form>
-    <form>
-        <mat-form-field>
-            <input matInput placeholder="Livros" 
-                [(ngModel)]="livro" name="nome">
+            <input matInput placeholder="Data do Cadastro" [(ngModel)]="biblioteca.dataCadastro" name="nome" disabled>
         </mat-form-field>
     </form>
 
+    <div>
+        <mat-card-title>Prestadores</mat-card-title>
+        <table mat-table [dataSource]="bibliotecarios">
+            <!-- Id Column -->
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef>Id</th>
+                <td mat-cell *matCellDef="let row">{{row.id}}</td>
+            </ng-container>
 
-<button mat-raised-button (click)="updateLivro()" color="primary" >
-    Atualizar
-</button>
+            <!-- Name Column -->
+            <ng-container matColumnDef="nome">
+                <th mat-header-cell *matHeaderCellDef>Nome</th>
+                <td mat-cell *matCellDef="let row">{{row.nome}}</td>
+            </ng-container>
 
-<button mat-raised-button (click)="cancel()">
-    Cancelar
-</button>
+            <!-- Data de criação Column -->
+            <ng-container matColumnDef="dataCriacao">
+                <th mat-header-cell *matHeaderCellDef>Data de criação</th>
+                <td mat-cell *matCellDef="let row">{{row.dataCriacao}}</td>
+            </ng-container>
+
+
+            <!-- Action Column -->
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef>Ações</th>
+                <td mat-cell *matCellDef="let row">
+                    <a routerLink="/bibliotecarios/update/{{ row.id }}" class="edit">
+                        <i class="material-icons">
+                            edit
+                        </i>
+                    </a>
+                    <a routerLink="/bibliotecarios/delete/{{ row.id }}" class="delete">
+                        <i class="material-icons">
+                            delete
+                        </i>
+                    </a>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+
+
+    <div>
+        <button mat-fab color="primary" aria-label="Example icon button with a delete icon" routerLink="/livros">
+
+            <i class="material-icons">
+                menu_book
+            </i>
+        </button>
+    </div>
+
+
+    <button mat-raised-button (click)="updateBiblioteca()" color="primary">
+        Atualizar
+    </button>
+
+    <button mat-raised-button (click)="cancel()">
+        Cancelar
+    </button>
+
 </mat-card>
