--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -6,7 +6,7 @@
                 <i class="material-icons">
                     home
                 </i>
-                Início
+                Bibliotecas
             </a>
             <a mat-list-item routerLink="/livros">
                 <i class="material-icons">
