--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,9 +1,3 @@
-<mat-card class="home mat-elevation-z3">
-    <mat-card-title class="title">
-        Bem Vindo!
-    </mat-card-title>
-    <mat-card-subtitle class="subtitle">
-        sistema Biblioteca Audax em Angular v9 e spring boot
-    </mat-card-subtitle>
-    <app-biblioteca-crud></app-biblioteca-crud>
-</mat-card>
+<app-header></app-header>
+<app-nav></app-nav>
+<app-footer></app-footer>
