--- a/src/app/components/bibliotecario/bibliotecario-create/bibliotecario-create.component.html
+++ b/src/app/components/bibliotecario/bibliotecario-create/bibliotecario-create.component.html
@@ -2,29 +2,33 @@
     <mat-card-title>Novo Bibliotecario</mat-card-title>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Nome" 
-                [(ngModel)]="bibliotecario.nome" name="nome">
+            <input matInput placeholder="Nome" [(ngModel)]="bibliotecario.nome" name="nome" required>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Empresa" 
-                [(ngModel)]="bibliotecario.bibliotecas" name="bibliotecas">
+            <input matInput placeholder="Email" [(ngModel)]="bibliotecario.usuario.login" name="login" required>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Status" 
-                [(ngModel)]="bibliotecario.status" name="status">
-        </mat-form-field>
+            <input matInput placeholder="Senha" [(ngModel)]="bibliotecario.usuario.password" name="password" required>
+        </mat-form-field> 
+
+        <h4>Empresa</h4>
         <mat-form-field>
-            <input matInput placeholder="Admin" 
-                [(ngModel)]="bibliotecario.admin" name="admin">
+            <mat-label>Selecione a Empresa</mat-label>
+            <mat-select [(ngModel)]="bibliotecario.bibliotecas" name="bibliotecas.id" required>
+                <mat-option *ngFor="let biblioteca of bibliotecas" [value]="biblioteca.id">
+                     {{biblioteca.nome}}
+                </mat-option>
+            </mat-select>
         </mat-form-field>
     </form>
 
 
-<button mat-raised-button (click)="createBibliotecario()" color="primary" >
-    Salvar
-</button>
 
-<button mat-raised-button (click)="cancel()">
-    Cancelar
-</button>
+    <button mat-raised-button (click)="createBibliotecario()" color="primary">
+        Salvar
+    </button>
+
+    <button mat-raised-button (click)="cancel()">
+        Cancelar
+    </button>
 </mat-card>
