finalizado front end

--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -7,7 +7,7 @@
         </mat-form-field>
 
         <mat-form-field>
-            <input matInput placeholder="Senha" [(ngModel)]="usuario.password" name="password" required>
+            <input matInput placeholder="Senha" type="password" [(ngModel)]="usuario.password" name="password" required>
         </mat-form-field>
     </form>
 
