--- a/src/app/components/bibliotecario/bibliotecario-create/bibliotecario-create.component.html
+++ b/src/app/components/bibliotecario/bibliotecario-create/bibliotecario-create.component.html
@@ -8,7 +8,7 @@
             <input matInput placeholder="Email" [(ngModel)]="bibliotecario.usuario.login" name="login" required>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Senha" [(ngModel)]="bibliotecario.usuario.password" name="password" required>
+            <input matInput placeholder="Senha" type="password" [(ngModel)]="bibliotecario.usuario.password" name="password" required>
         </mat-form-field> 
 
         <h4>Empresa</h4>
